Prevent line breaks in tables

--- a/style.css
+++ b/style.css
@@ -146,6 +146,7 @@ img {
   margin-left: 30px;
   width: 95vw;
   transition: opacity 0.3s;
+  white-space: nowrap;
 }
 
 #projects {
